samples/_failures_safe/1761254170_79bfb1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15989058.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_15989058.c:171:9: error: expected declaration or statement at end of input
  171 |         default: return "UNKNOWN";
      |         ^~~~~~~
./samples/SAFE/__tmp_15989058.c:171:9: error: expected declaration or statement at end of input
